aggiornato Unicode del microfono non muto

--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,8 @@ main{
 }
 
 /* microfono rosso all'Active */
-main .container-image .name-partecipant:active .fas::before{
-    content: "f130";
+main .container-image .name-partecipant:active .fas::before{   
+    content: "\f130";
     color:red;
 }
 /* ------------------- */
