--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,10 @@ header{
 /* MAIN */
 
 main{    
-    height: calc(200vh - 160px); 
-    margin: 60px;
-    flex-wrap: wrap; 
+    height: calc(150vh - 160px); 
+    margin: 60px 0;
+    flex-wrap: wrap;
+    justify-content:center; 
     align-content: flex-start; 
 }
 
@@ -76,7 +77,7 @@ main{
 }
  
 .container-image img{
-    object-fit: contain;
+    object-fit: cover;
 }
 
 /* microfono rosso all'Active */
@@ -121,7 +122,6 @@ footer{
     font-size: 12px;
     text-align: center;
    
-
     align-items: center;
 }
 
@@ -146,6 +146,10 @@ footer{
     flex-grow: 1;
     width: 500px;
     justify-content: center;
+}
+
+.footer-container .col div:hover{
+    transform: scale(1.2);
 }
 
 .footer-container .central .share-square .fa-share-square{
